--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
     "cryptiles": "^4.1.2",
     "macaddress": "^0.2.9",
     "sshpk": "^1.13.2",
-    "url-parse": "^1.4.3"
+    "url-parse": "^1.4.3",
+    "elliptic": "^6.5.3",
+    "dot-prop": "^5.1.1"
   }
 }
